--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -57,10 +57,28 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
 
-</script>
+    window.addEventListener('keydown',handler,false)
+  
+    function handler (e) {
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      if(audio) {
+        audio.currentTime = 0,
+        audio.play()
+      }
+      const dom =  document.querySelector(`div[data-key="${e.keyCode}"]`)
+      if(dom) dom.classList.add('playing')
+    }
 
+    document.querySelectorAll('.key').forEach(function(key){
+        key.addEventListener('transitionend',transitionendHandler)
+    })
+    function transitionendHandler (e) {
+        if(e.propertyName === 'transform')
+          e.currentTarget.classList.remove('playing')
+    }
+  </script>
 
 </body>
 </html>
